--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
 <head>
   <link rel="preconnect" href="https://fonts.gstatic.com/" crossorigin>
   <link rel="preload" as="style" onload="this.rel='stylesheet'" href="https://fonts.googleapis.com/css2?family=Kumbh Sans:wght@100;300;400;500;700;900&display=swap">
-
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@mdi/font@latest/css/materialdesignicons.min.css" />
+  
   <meta charset="UTF-8" />
   <link rel="icon" href="/favicon.ico" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
